# CellDevsInformationImpact

./: .gitignore  CMakeLists.txt  DEVSmodelsForm.docx  README.md  asst2.docx  base_scenario_simulation.webm  edge_wrap_scenario_simulation.webm  run_base_scenario.sh  run_clustered_scenario.sh  run_edge_wrap_scenario.sh  run_single_seed_scenario.sh  ~$VSmodelsForm.docx  ~$asst2.docx
Simulation_videos/: clustered_scenario_simulation.webm  single_seed_scenario_simulation.webm
config/: socialVisualization_config.json  social_config_base_scenario.json  social_config_clustered.json  social_config_edge_wrap.json  social_config_single_seed.json
include/: socialCell.hpp  socialState.hpp
log/: social_log_base_scenario_log.csv  social_log_clustered_log.csv  social_log_edge_wrap_log.csv  social_log_single_seed_log.csv
main/: CMakeLists.txt  main.cpp
